--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  <link rel="stylesheet" href="estilopag.css">
+  <link rel="stylesheet" href="assets\estilopag.css">
 
   <title>Frontend Mentor | Recipe page</title>
 
@@ -18,7 +18,7 @@
 
 <body>
   <picture class="topo">
-    <img src="E:\Progama curse\Solução de projeto\meuprojeto\image-omelette.jpeg" alt="">
+    <img src="E:\Progama curse\Solução de projeto\meuprojeto\assets\image-omelette.jpeg" alt="">
   </picture>
   <article>
     <h1>Simple Omelette Recipe</h1>
