--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
 </head>
 
 <body>
-  <picture class="topo">
-    <img src="E:\Progama curse\Solução de projeto\meuprojeto\assets\image-omelette.jpeg" alt="">
-  </picture>
+
+  <div class="imagem_1">
+    <picture class="topo">
+      <img src="E:\Progama curse\Solução de projeto\meuprojeto\assets\image-omelette.jpeg" alt="">
+    </picture>
+  </div>
+
   <article>
     <h1>Simple Omelette Recipe</h1>
   </article>
