--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <div class="imagem_1">
     <picture class="topo">
-      <img src="E:\Progama curse\Solução de projeto\meuprojeto\assets\image-omelette.jpeg" alt="">
+      <img src="assets\image-omelette.jpeg" alt="">
     </picture>
   </div>
 
