--- a/index.html
+++ b/index.html
@@ -12,17 +12,20 @@
 
   <title>Frontend Mentor | Recipe page</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+
 
 </head>
 
 <body>
+  <header>
+  </header>
 
-  <div class="imagem_1">
+  <section id="imagem_1">
     <picture class="topo">
-      <img src="assets\image-omelette.jpeg" alt="">
+      <img src="../meuprojeto/assets/image-omelette.jpeg" alt="">
     </picture>
-  </div>
+  </section>
+
 
   <article>
     <h1>Simple Omelette Recipe</h1>
