--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <section id="imagem_1">
     <picture class="topo">
-      <img src="../meuprojeto/assets/image-omelette.jpeg" alt="">
+      <img src="assets\image-omelette.jpeg" alt="">
     </picture>
   </section>
 
@@ -114,7 +114,7 @@
         <td>
           Calories
         </td>
-        <td>
+        <td class="calorias">
           277kcal
         </td>
       </tr>
@@ -128,9 +128,9 @@
         <td>
           Carbs
         </td>
-        <td>
+        <td class="calorias">
           0g
-        </td>
+        </td class="calorias">
       </tr>
     </table>
     <hr>
@@ -138,7 +138,7 @@
     <table width="100%">
       <tr>
         <td>Protein</td>
-        <td>20g</td>
+        <td class="calorias">20g</td>
       </tr>
 
     </table>
@@ -146,7 +146,7 @@
     <table width="100%">
       <tr>
         <td>Fat</td>
-        <td>22g</td>
+        <td class="calorias">22g</td>
       </tr>
     </table>
 
@@ -156,8 +156,8 @@
   <div class="attribution">
 
     <p class="rodape">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend
-        Mentor</a>.
-      Coded by <a href="#">Arthur</a>.</p>
+        Mentor </a>.
+      Coded by <a href="#">ArthurBr14</a>.</p>
 
   </div>
 </body>
